--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Portfolio | Caitlin Napua M. Duquette</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,8 +24,177 @@
 
 <body>
 
+  <!-- NAV -->
+    <nav>
+      <h1>Caitlin Duquette</h1>
+      <ul class="navigation">
+        <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="#skills" class="nav-link">Skills</a></li>
+        <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="#contact" class="nav-link">Contact</a></li>
+      </ul>
+      <button class="burger-menu" id="burger-menu">
+        <ion-icon class="bars" name="menu-outline"></ion-icon>
+      </button>
+    </nav>
+
+  <!-- HERO SECTION -->
+    <section class="header">
+      <div class="intro-section">
+        <h1 class="intro-section">Caitlin Napua M. Duquette</h1>
+        <p class="intro-section">is a Front End Developer</p>
+      </div>
+    </section>
+
+
+  <!-- PROJECTS -->
+    <section class="projects" id="projects">
+      <h2 class="projects-title">Recent Proj</h2>
+      <div class="projects-container">
+        <!-- project -->
+        <div class="project-container project-card">
+          <img
+            src="./img/githubrepogallery.jpg"
+            alt="repo gallery"
+            loading="loading..."
+            class="project-pic"
+          />
+          <h3 class="project-title">GitHub Repo Gallery</h3>
+          <p class="project-details">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!
+          </p>
+          <a href="#" target="_blank">View Live</a>
+        </div>
+        <!-- project -->
+        <div class="project-container project-card">
+          <img
+            src="./img/unplugged.jpg"
+            alt="unplugged site"
+            loading="loading..."
+            class="project-pic"
+          />
+          <h3 class="project-title">Unplugged | </h3>
+          <p class="project-details">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!
+          </p>
+          <a href="#" target="_blank">View Live</a>
+        </div>
+        <!-- project -->
+        <div class="project-container project-card">
+          <img
+            src="./img/nametaggenerator.jpg"
+            alt="name tag generator"
+            loading="loading..."
+            class="project-pic"
+          />
+          <h3 class="project-title">Name Tag Generator</h3>
+          <p class="project-details">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!
+          </p>
+          <a href="#" target="_blank">View Live</a>
+        </div>
+        <!-- project -->
+        <div class="project-container project-card">
+          <img
+            src="./img/superstickynote.jpg"
+            alt="super super sticky note"
+            loading="loading..."
+            class="project-pic"
+          />
+          <h3 class="project-title">Super Sticky Note</h3>
+          <p class="project-details">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!
+          </p>
+          <a href="#" target="_blank">View Live</a>
+        </div>
+      </div>
+    </section>
+
+
+  <!-- SKILLS -->
+    <section class="skills" id="skills">
+      <h2 class="skills-header">My Amazing Skills</h2>
+      <div class="skills-wrapper">
+        <div class="ability-list">
+          <h3>Developer Skills</h3>
+          <ul class="ability">
+            <li class="ability">HTML</li>
+            <li class="ability">CSS</li>
+            <li class="ability">JS</li>
+            <li class="ability">React</li>
+            <li class="ability">Git</li>
+            <li class="ability">Responsive Web Development</li>
+            </ul>
+        </div>
+        <div class="tool-list">
+          <h3>Tech Stack</h3>
+          <ul class="tools">
+            <li class="tool">GitHub Pages</li>
+            <li class="tool">CodeSandbox</li>
+            <li class="tool">Chrome DevTools</li>
+            <li class="tool">Adobe CC</li>
+            <li class="tool">Squarespace, Wix</li>
+            <li class="tool">Canva</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+
+
+  <!-- ABOUT -->
+  <section class="about" id="info">
+    <img 
+      src="./img/cait.png" 
+      alt="cait"
+      loading="patience..."
+      class="about-img"
+      />
+    <div class="bio animate__animated animate__shakeX">
+      <h2 class="bio-title">About Me</h2>
+      <p class="bio-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
+          dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
+          inventore tempore minus nemo, iste ullam illo laboriosam maiores
+          repudiandae quos!
+      </p>
+    </div>
+  </section>
+
+
+  <!-- FOOTER -->
+  <section class="footer">
+    <div class="social">
+      <h3>Social</h3>
+      <p>linkedin</p>
+      <p>github</p>
+      <p>ar.ena?</p>
+    </div>
+    <div class="marginLeft">
+      <h3>Contact</h3>
+      <p>email</p>
+      <p>info</p>
+    </div>
+    <div class="footer-1"><h1>I'd love to hear from you;</h1></div>
+  </section>
+  <section class="copyright">
+    <div class="copyright">
+      <h2>Copyright 2023 Caitlin Napua M. Duquette </h2>
+    </div>
+  </section>
+
+
+
+
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
