--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="#projects" class="nav-link">Projects</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
         <li><a href="#about" class="nav-link">About</a></li>
-        <li><a href="#contact" class="nav-link">Contact</a></li>
+        <li><a href="#footer" class="nav-link">Contact</a></li>
       </ul>
       <button class="burger-menu" id="burger-menu">
         <ion-icon class="bars" name="menu-outline"></ion-icon>
@@ -151,7 +151,7 @@
 
 
   <!-- ABOUT -->
-  <section class="about" id="info">
+  <section class="about" id="about">
     <img 
       src="./img/cait.png" 
       alt="cait"
@@ -171,7 +171,7 @@
 
 
   <!-- FOOTER -->
-  <section class="footer">
+  <section class="footer" id="footer">
     <div class="social">
       <h3>Social</h3>
       <p>linkedin</p>
@@ -191,6 +191,14 @@
     </div>
   </section>
 
+
+  <!-- SCROLL UP BUTTON -->
+  <i class="scroll-up" id="scroll-up"
+      ><img
+        src="assets/icons/icons8-upward-arrow.gif"
+        class="socicon up-arrow"
+        alt="scroll-up"
+    /></i>
 
 
 
