--- a/index.html
+++ b/index.html
@@ -38,15 +38,30 @@
   <!-- HERO SECTION -->
     <section class="header">
       <div class="intro-section">
-        <h1 class="intro-section">Caitlin Napua M. Duquette</h1>
-        <p class="intro-section">is a Front End Developer</p>
+        <h1 class="intro-section">Caitlin Napua <em>M.</em> &nbsp;Duquette</h1>
+        <p class="intro-section">is a Front End Developer.</p>
       </div>
     </section>
 
 
   <!-- PROJECTS -->
     <section class="projects" id="projects">
-      <h2 class="projects-title">Recent Proj</h2>
+      <h2 class="projects-title">Recent Projects</h2>
+      <div class="projects-info">
+        <p class="introduction">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!
+        </p>
+      </div>
       <div class="projects-container">
         <!-- project -->
         <div class="project-container project-card">
@@ -58,11 +73,19 @@
           />
           <h3 class="project-title">GitHub Repo Gallery</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            This project pulls data from my GitHub portfolio, creating a gallery of 
+            repos. Visitors can click on the repos for more details, including a 
+            link to the actual repo.
           </p>
-          <a href="#" target="_blank">View Live</a>
+          <p class="project-details">
+            <strong><em>Skills:</em></strong> JavaScript, APIs, Manipulate the DOM
+          </p>
+            <p class="project-details">
+              <strong><em>Tools:</em></strong> GitHub, CodeSandbox
+          </p>
+          <button class="project-button">
+            <a href="https://cnapua.github.io/github-repo-gallery-main/" target="_blank">View Live</a>
+          </button>
         </div>
         <!-- project -->
         <div class="project-container project-card">
@@ -72,13 +95,21 @@
             loading="loading..."
             class="project-pic"
           />
-          <h3 class="project-title">Unplugged | </h3>
+          <h3 class="project-title">Unplugged Retreat</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            A clean and informative multipage website for a tech industry retreat 
+            utilizing mobile responsive design. With several sections in this design,
+             it can easily be repurposed.
           </p>
-          <a href="#" target="_blank">View Live</a>
+          <p class="project-details">
+            <strong><em>Skills:</em></strong> CSS3, HTML5, Flexbox, Media Queries, Responsive Typography
+          </p>
+            <p class="project-details">
+              <strong><em>Tools:</em></strong> GitHub Pages, Chrome DevTools, VSCode
+          </p>
+          <button class="project-button">
+            <a href="https://cnapua.github.io/responsive-web-project/index.html" target="_blank">View Live</a>
+          </button>
         </div>
         <!-- project -->
         <div class="project-container project-card">
@@ -90,11 +121,18 @@
           />
           <h3 class="project-title">Name Tag Generator</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            A name tag generator that creates bulk name tags. Utilizes ES6 modules and functional components.
           </p>
-          <a href="#" target="_blank">View Live</a>
+          <p class="project-details">
+            <strong><em>Skills:</em></strong> JSX, ES6, Managing data flow
+          </p>
+            <p class="project-details">
+              <strong><em>Tools:</em></strong> CodeSandbox
+          </p>
+          
+          <button class="project-button">
+            <a href="https://nwlmn6.csb.app/" target="_blank">View Live</a>
+          </button>
         </div>
         <!-- project -->
         <div class="project-container project-card">
@@ -106,11 +144,18 @@
           />
           <h3 class="project-title">Super Sticky Note</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            This greenfield project allows users to add, edit, search for and delete “sticky notes.” 
+            Multiple components were used in building this interactive UI.
           </p>
-          <a href="#" target="_blank">View Live</a>
+          <p class="project-details">
+            <strong><em>Skills:</em></strong> ES6, JSX, Managing data flow, Manipulate the DOM
+          </p>
+            <p class="project-details">
+              <strong><em>Tools:</em></strong> CodeSandbox
+          </p>
+          <button class="project-button">
+          <a href="https://zpg8jt.csb.app/" target="_blank">View Live</a>
+        </button>
         </div>
       </div>
     </section>
@@ -118,10 +163,34 @@
 
   <!-- SKILLS -->
     <section class="skills" id="skills">
-      <h2 class="skills-header">My Amazing Skills</h2>
+      <section class="projects" id="projects">
+        <h2 class="projects-title">Relevant Skills</h2>
+        <div class="projects-info">
+          <p class="introduction">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              ratione vel inventore labore commodi modi quos culpa aut saepe!
+              Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              ratione vel inventore labore commodi modi quos culpa aut saepe!
+              Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              ratione vel inventore labore commodi modi quos culpa aut saepe!
+              Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              ratione vel inventore labore commodi modi quos culpa aut saepe!
+              Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              ratione vel inventore labore commodi modi quos culpa aut saepe!
+              Alias!
+          </p>
+        </div>
       <div class="skills-wrapper">
         <div class="ability-list">
-          <h3>Developer Skills</h3>
+          <h3>Tech Stack</h3>
+          <ul class="tools">
+            <li class="tool">GitHub Pages</li>
+            <li class="tool">CodeSandbox</li>
+            <li class="tool">Chrome DevTools</li>
+          </ul>
+        </div>
+        <div class="ability-list">
+          <h3>Dev Skills</h3>
           <ul class="ability">
             <li class="ability">HTML</li>
             <li class="ability">CSS</li>
@@ -131,12 +200,9 @@
             <li class="ability">Responsive Web Development</li>
             </ul>
         </div>
-        <div class="tool-list">
-          <h3>Tech Stack</h3>
+        <div class="ability-list">
+          <h3>Tools</h3>
           <ul class="tools">
-            <li class="tool">GitHub Pages</li>
-            <li class="tool">CodeSandbox</li>
-            <li class="tool">Chrome DevTools</li>
             <li class="tool">Adobe CC</li>
             <li class="tool">Squarespace, Wix</li>
             <li class="tool">Canva</li>
@@ -148,20 +214,30 @@
 
 
   <!-- ABOUT -->
+  
+  
   <section class="about" id="about">
-    <img 
-      src="./img/cait.png" 
+
+    <div class="bio animate__animated animate__shakeX">
+      <h2 class="bio-title"></h2>
+      <p class="bio-text1">
+        <em><strong>I'm Caitlin.</strong> Thanks for being here.</em>
+      </p>
+    </div>
+    <div class="bio animate__animated animate__shakeX">
+      <img 
+      src="./img/mscait.png" 
       alt="cait"
       loading="patience..."
       class="about-img"
       />
+    </div>
     <div class="bio animate__animated animate__shakeX">
-      <h2 class="bio-title">About Me</h2>
-      <p class="bio-text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-          dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-          inventore tempore minus nemo, iste ullam illo laboriosam maiores
-          repudiandae quos!
+      <h2 class="bio-title"></h2>
+      <p class="bio-text2">
+        <br><br><br><br><br><br><br><br>
+        Passionate, driven, and solutions-based. My aim is to create experiences that are 
+        visually pleasing and engage users.
       </p>
     </div>
   </section>
