--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <script src="https://kit.fontawesome.com/db62bd30ba.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -246,32 +248,36 @@
   <!-- FOOTER -->
   <section class="footer" id="footer">
     <div class="social">
-      <h3>Social</h3>
-      <p>linkedin</p>
-      <p>github</p>
-      <p>ar.ena?</p>
+      <h3></h3>
+      <div class="social-icons">
+        <p>
+          <a href="https://linkedin.com/in/caitlinduquette/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </p>
+        <p>
+          <a href="https://github.com/cnapua/" target="_blank"><i class="fab fa-github"></i></a>
+        </p>
+      </div>
     </div>
     <div class="marginLeft">
-      <h3>Contact</h3>
-      <p>email</p>
-      <p>info</p>
+      <h3></h3>
+      <div class="social-icons">
+        <p>
+          <a href="mailto:caitlin.duquette@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+        </p>
+      </div>
     </div>
     <div class="footer-1"><h1>I'd love to hear from you;</h1></div>
   </section>
   <section class="copyright">
     <div class="copyright">
-      <h2>Copyright 2023 Caitlin Napua M. Duquette </h2>
+      <h2 class="copyright-header">Copyright © 2023 Caitlin Napua M. Duquette </h2>
     </div>
   </section>
 
 
   <!-- SCROLL UP BUTTON -->
   <i class="scroll-up" id="scroll-up"
-      ><img
-        src="assets/icons/icons8-upward-arrow.gif"
-        class="socicon up-arrow"
-        alt="scroll-up"
-    /></i>
+      ><i class="fa-solid fa-circle-up"></i></i>
 
 
 
