--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<html class="no-js" lang="">
 
 <head>
   <meta charset="utf-8">
@@ -51,17 +50,12 @@
       <h2 class="projects-title">Recent Projects</h2>
       <div class="projects-info">
         <p class="introduction">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+          The projects below are my most recent projects that involve HTML5, CSS3, 
+          JavaScript, React, and other tools. As a working adult for the past 15 years I possess
+           a lot of valuable transferrable skills including organization, clear communication, 
+           leadership, and a wicked attention to detail. Maintaining an eager-to-learn 
+           mindset and prioritizing clean, consistent and clear code are practices I strive 
+           to apply.
         </p>
       </div>
       <div class="projects-container">
@@ -70,9 +64,8 @@
           <img
             src="./img/githubrepogallery.jpg"
             alt="repo gallery"
-            loading="loading..."
-            class="project-pic"
-          />
+            loading="loading"
+            class="project-pic">
           <h3 class="project-title">GitHub Repo Gallery</h3>
           <p class="project-details">
             This project pulls data from my GitHub portfolio, creating a gallery of 
@@ -94,9 +87,8 @@
           <img
             src="./img/unplugged.jpg"
             alt="unplugged site"
-            loading="loading..."
-            class="project-pic"
-          />
+            loading="loading"
+            class="project-pic">
           <h3 class="project-title">Unplugged Retreat</h3>
           <p class="project-details">
             A clean and informative multipage website for a tech industry retreat 
@@ -118,9 +110,8 @@
           <img
             src="./img/nametaggenerator.jpg"
             alt="name tag generator"
-            loading="loading..."
-            class="project-pic"
-          />
+            loading="loading"
+            class="project-pic">
           <h3 class="project-title">Name Tag Generator</h3>
           <p class="project-details">
             A name tag generator that creates bulk name tags. Utilizes ES6 modules and functional components.
@@ -141,9 +132,8 @@
           <img
             src="./img/superstickynote.jpg"
             alt="super super sticky note"
-            loading="loading..."
-            class="project-pic"
-          />
+            loading="loading"
+            class="project-pic">
           <h3 class="project-title">Super Sticky Note</h3>
           <p class="project-details">
             This greenfield project allows users to add, edit, search for and delete “sticky notes.” 
@@ -167,21 +157,6 @@
     <section class="skills" id="skills">
       <section class="projects" id="projects">
         <h2 class="projects-title">Relevant Skills</h2>
-        <div class="projects-info">
-          <p class="introduction">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-              ratione vel inventore labore commodi modi quos culpa aut saepe!
-              Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-              ratione vel inventore labore commodi modi quos culpa aut saepe!
-              Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-              ratione vel inventore labore commodi modi quos culpa aut saepe!
-              Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-              ratione vel inventore labore commodi modi quos culpa aut saepe!
-              Alias!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-              ratione vel inventore labore commodi modi quos culpa aut saepe!
-              Alias!
-          </p>
-        </div>
       <div class="skills-wrapper">
         <div class="ability-list">
           <h3>Tech Stack</h3>
@@ -220,26 +195,31 @@
   
   <section class="about" id="about">
 
-    <div class="bio animate__animated animate__shakeX">
-      <h2 class="bio-title"></h2>
+    <div class="bio section">
       <p class="bio-text1">
-        <em><strong>I'm Caitlin.</strong> Thanks for being here.</em>
+        <em><strong>I'm Caitlin.</strong> Thanks for being here.</em> 
+        Passionate, driven, and solutions-based. As a <em>front end developer,</em> 
+        my aim is to create experiences that are visually pleasing and engage users. 
+        I'd love to work with you.
       </p>
     </div>
-    <div class="bio animate__animated animate__shakeX">
+    <div class="bio section">
       <img 
       src="./img/mscait.png" 
       alt="cait"
       loading="patience..."
-      class="about-img"
-      />
+      class="about-img">
     </div>
-    <div class="bio animate__animated animate__shakeX">
-      <h2 class="bio-title"></h2>
+    <div class="bio section">
       <p class="bio-text2">
-        <br><br><br><br><br><br><br><br>
-        Passionate, driven, and solutions-based. My aim is to create experiences that are 
-        visually pleasing and engage users.
+        <br><br><br><br><br>
+        As a teenager I coded obsessively and returned to web design and development 
+        only recently. Limited resources and exposure allowed me to take a break 
+        from coding and gain other professional skills in communication, organization, 
+        and detail orientation.
+        <br><br>
+        When I'm not juggling coding with a full-time customer service job, I can be 
+        found in the backcountry with my family.
       </p>
     </div>
   </section>
@@ -248,7 +228,6 @@
   <!-- FOOTER -->
   <section class="footer" id="footer">
     <div class="social">
-      <h3></h3>
       <div class="social-icons">
         <p>
           <a href="mailto:caitlin.duquette@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
@@ -262,7 +241,13 @@
       </div>
     </div>
     </div>
-    <div class="footer-1"><h1>I'd love to hear from you;</h1></div>
+    <div class="footer-1"><h1>I'd love to hear from you;<br>
+      <a href="mailto:caitlin.duquette@gmail.com" target="_blank">
+        caitlin.<br>
+        duquette<br>
+        @gmail<br>
+        .com</a></h1>
+    </div>
   </section>
   <section class="copyright">
     <div class="copyright">
