--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- NAV -->
     <nav>
-      <h1><!-- space for a future heading or icon --></h1>
+      <img src="siteicon.png" class="nav-icon" alt="axe icon">
       <ul class="navigation">
         <li><a href="#projects-area" class="nav-link">Projects</a></li>
         <li><a href="#skills-area" class="nav-link">Skills</a></li>
@@ -54,9 +54,9 @@
           Name Tag Generator | JSX, ES6
         </button>
         <div class="panel">
-          <p class="project-pic">
+          <figure class="project-pic">
             <img src="./img/nametaggenerator.jpg" alt="project pic" class="project-pic">
-          </p>
+          </figure>
           <p class="project-details">
             A name tag generator that creates bulk name tags. Utilizes ES6 modules and functional components.<br><br>
           </p>
@@ -75,9 +75,9 @@
           Super Sticky Note | ES6, JSE
         </button>
         <div class="panel">
-          <p class="project-pic">
+          <figure class="project-pic">
             <img src="./img/superstickynote.jpg" alt="project pic" class="project-pic">
-          </p>
+          </figure>
           <p class="project-details">
             This greenfield project allows users to add, edit, search for and delete “sticky notes.” 
             Multiple components were used in building this interactive UI.<br><br>
@@ -97,9 +97,9 @@
           Unplugged Retreat | HTML/CSS, <br>Media Queries, Responsive Typography
         </button>
         <div class="panel">
-          <p class="project-pic">
-            <img src="./img/unplugged.jpg" alt="project pic" class="project-pic">
-          </p>
+          <figure class="project-pic">
+            <img src="./img/unplugged.png" alt="project pic" class="project-pic">
+          </figure>
           <p class="project-details">
             A clean and informative multipage website for a tech industry retreat 
             utilizing mobile responsive design. With several sections in this design,
