--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   <!-- HERO SECTION -->
     <section class="header">
       <div class="intro-section">
-        <h1 class="intro-section">Caitlin Napua <em>M.</em> &nbsp;Duquette</h1>
-        <p class="intro-section">is a Front End Developer.</p>
+        <h1 class="intro-section">My name is <em>Caitlin Napua</em> M. Duquette</h1>
+        <p class="intro-section">I'm a Front End Developer on Maui, Hawaiʻi.</p>
       </div>
     </section>
 
