--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="header">
       <div class="intro-section">
         <h1 class="intro-section">My name is <em>Caitlin Napua</em> M. Duquette</h1>
-        <p class="intro-section">I'm a Front End Developer on Maui, Hawaiʻi.</p>
+        <p class="intro-section">I'm a Front End Developer in Maui, Hawaiʻi.</p>
       </div>
     </section>
 
