Additional fine tuning

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <em><strong>I'm Caitlin.</strong> Thanks for being here.</em> 
         Passionate, driven, and solutions-based. As a <em>front end developer,</em> 
         my aim is to create experiences that are visually pleasing and engage users. 
-        I'd love to work with you.
+        <strong>I'd love to work with you.</strong>
       </p>
     </div>
     <div class="bio section">
