About header update

--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
 
   <!-- ABOUT -->
   
-  
+  <h2 class="about-title">About Me</h2>
   <section class="about" id="about-area">
-
     <div class="bio section">
       <p class="bio-text1">
         <em><strong>I'm Caitlin.</strong> Thanks for being here.</em> 
