--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <div class="social">
       <div class="social-icons">
         <p>
-          <a href="mailto:caitlin.duquette@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+          <a href="./img/CDuquette_resume.pdf" target="_blank"><i class="fa-regular fa-file"></i></a>
         </p>
         <p>
           <a href="https://linkedin.com/in/caitlinduquette/" target="_blank"><i class="fab fa-linkedin"></i></a>
