--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="header">
       <div class="intro-section">
         <h1 class="intro-section">My name is <em>Caitlin Napua</em> M. Duquette</h1>
-        <p class="intro-section">I'm a Front End Developer in Maui, Hawaiʻi.</p>
+        <p class="intro-section">I'm a Front End Developer in Māui, Hawaiʻi.</p>
       </div>
     </section>
 
@@ -176,14 +176,15 @@
     </div>
     <div class="bio section">
       <p class="bio-text2">
-        As a teenager I coded obsessively and returned to web design and development 
-        only recently. Limited resources and exposure allowed me to take a break 
-        from coding and gain other professional skills in communication, organization, 
-        and detail orientation.
+        A diverse professional background equipped me with real-world skills and 
+        the ability to be both visually creative and a solutions-based 
+        problem solver. I enjoy designs and projects that nourish my ecological and 
+        community-supporting interests, while remaining visually satisfying.
     </p>
       <p class="bio-text2">
-        When I'm not juggling coding with a full-time customer service job, I can be 
-        found in the backcountry with my family.
+        I studied Interdisciplinary Studies (B.A.) with a focus on human relations and 
+        communication from the University of Hawaiʻi at Mānoa 
+        and pre-medicine (A.A.) from the University of Hawaiʻi Maui College. 
       </p>
     </div>
   </section>
