--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="#skills-area" class="nav-link">Skills</a></li>
         <li><a href="#about-area" class="nav-link">About</a></li>
         <li><a href="#footer-area" class="nav-link">Contact</a></li>
+        <li><a href="./img/CDuquette_resume.pdf" target="_blank">Resume</a></li>
       </ul>
     </nav>
 
